--- a/jsjsj.html
+++ b/jsjsj.html
@@ -8,6 +8,7 @@
 <input type="radio" name="colors" onclick="document.body.style.backgroundColor='red'"> RED </input>
 <input type="radio" name="colors" onclick="document.body.style.backgroundColor='blue'"> BLUE </input>
 <input type="radio" name="colors" onclick="document.body.style.backgroundColor='yellow'"> YELLOW </input>
+<input type="radio" name="colors" onclick="document.body.style.backgroundColor='pink'"> PINK </input>
 </form>
 </body>
 </html>
